csvdsl/src/Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.5 from src/Grammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseCalc -> Query                          (0)
	Query -> SELECT '(' selectList ')'                 (1)
	Query -> SELECT '(' selectList ')' WHERE '(' condition ')'   (2)
	Query -> DO tasks                                  (3)
	Query -> DO tasks WHERE '(' condition ')'          (4)
	condition -> selectItem '=' string                 (5)
	condition -> selectItem '!=' string                (6)
	condition -> selectItem '=' selectItem             (7)
	condition -> selectItem '!=' selectItem            (8)
	condition -> selectItem IS EMPTY                   (9)
	condition -> selectItem IS NOT EMPTY               (10)
	condition -> condition AND condition               (11)
	condition -> condition OR condition                (12)
	selectList -> selectItem selectListRest            (13)
	selectListRest -> ',' selectItem selectListRest    (14)
	selectListRest ->                                  (15)
	selectItem -> GET columnIndex OF csv               (16)
	tasks -> task                                      (17)
	tasks -> task THEN tasks                           (18)
	task -> product                                    (19)
	task -> permutation                                (20)
	task -> copy                                       (21)
	task -> leftMerge                                  (22)
	task -> drop                                       (23)
	product -> PRODUCT '(' selectList ')' TIMES '(' selectList ')'   (24)
	drop -> DROP columnIndex IN csv                    (25)
	permutation -> PERMUTE '(' selectList ')' IN csv   (26)
	copy -> COPY csv WITH string                       (27)
	copy -> COPY columnIndex WITH string IN csv        (28)
	leftMerge -> LEFT MERGE csv TO csv ON columnIndex   (29)
	leftMerge -> LEFT MERGE csv TO csv                 (30)
	leftMerge -> LEFT MERGE '(' selectList ')' TO '(' selectList ')' ON columnIndex   (31)
	csv -> filename                                    (32)
	csv -> RESULT OF '(' tasks ')'                     (33)
	columnIndex -> COLUMN int                          (34)
	string -> '(' var ')'                              (35)
	filename -> FILENAME                               (36)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	SELECT         { TokenSelect }
	WHERE          { TokenWhere }
	DO             { TokenDo }
	','            { TokenComma }
	GET            { TokenGet }
	COLUMN         { TokenColumn }
	OF             { TokenOf }
	'!='           { TokenNeq }
	IS             { TokenIs }
	NOT            { TokenNot }
	EMPTY          { TokenEmpty }
	AND            { TokenAnd }
	OR             { TokenOr }
	THEN           { TokenThen }
	PRODUCT        { TokenProduct }
	TIMES          { TokenTimes }
	DROP           { TokenDrop }
	IN             { TokenIn }
	PERMUTE        { TokenPermute }
	COPY           { TokenCopy }
	WITH           { TokenWith }
	LEFT           { TokenLeft }
	MERGE          { TokenMerge }
	TO             { TokenTo }
	ON             { TokenOn }
	FILENAME       { TokenFileName $$ }
	RESULT         { TokenResult }
	int            { TokenInt $$ }
	var            { TokenVar $$ }
	'='            { TokenEq }
	'('            { TokenLParen }
	')'            { TokenRParen }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseCalc rule  0
	Query           rules 1, 2, 3, 4
	condition       rules 5, 6, 7, 8, 9, 10, 11, 12
	selectList      rule  13
	selectListRest  rules 14, 15
	selectItem      rule  16
	tasks           rules 17, 18
	task            rules 19, 20, 21, 22, 23
	product         rule  24
	drop            rule  25
	permutation     rule  26
	copy            rules 27, 28
	leftMerge       rules 29, 30, 31
	csv             rules 32, 33
	columnIndex     rule  34
	string          rule  35
	filename        rule  36

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseCalc -> . Query                         (rule 0)

	SELECT         shift, and enter state 4
	DO             shift, and enter state 5

	Query          goto state 3

State 1

	Query -> . SELECT '(' selectList ')'                (rule 1)

	SELECT         shift, and enter state 2


State 2

	Query -> SELECT . '(' selectList ')'                (rule 1)

	'('            shift, and enter state 19


State 3

	%start_parseCalc -> Query .                         (rule 0)

	%eof           accept


State 4

	Query -> SELECT . '(' selectList ')'                (rule 1)
	Query -> SELECT . '(' selectList ')' WHERE '(' condition ')'    (rule 2)

	'('            shift, and enter state 18


State 5

	Query -> DO . tasks                                 (rule 3)
	Query -> DO . tasks WHERE '(' condition ')'         (rule 4)

	PRODUCT        shift, and enter state 13
	DROP           shift, and enter state 14
	PERMUTE        shift, and enter state 15
	COPY           shift, and enter state 16
	LEFT           shift, and enter state 17

	tasks          goto state 6
	task           goto state 7
	product        goto state 8
	drop           goto state 9
	permutation    goto state 10
	copy           goto state 11
	leftMerge      goto state 12

State 6

	Query -> DO tasks .                                 (rule 3)
	Query -> DO tasks . WHERE '(' condition ')'         (rule 4)

	WHERE          shift, and enter state 35
	%eof           reduce using rule 3


State 7

	tasks -> task .                                     (rule 17)
	tasks -> task . THEN tasks                          (rule 18)

	WHERE          reduce using rule 17
	THEN           shift, and enter state 34
	')'            reduce using rule 17
	%eof           reduce using rule 17


State 8

	task -> product .                                   (rule 19)

	WHERE          reduce using rule 19
	THEN           reduce using rule 19
	')'            reduce using rule 19
	%eof           reduce using rule 19


State 9

	task -> drop .                                      (rule 23)

	WHERE          reduce using rule 23
	THEN           reduce using rule 23
	')'            reduce using rule 23
	%eof           reduce using rule 23


State 10

	task -> permutation .                               (rule 20)

	WHERE          reduce using rule 20
	THEN           reduce using rule 20
	')'            reduce using rule 20
	%eof           reduce using rule 20


State 11

	task -> copy .                                      (rule 21)

	WHERE          reduce using rule 21
	THEN           reduce using rule 21
	')'            reduce using rule 21
	%eof           reduce using rule 21


State 12

	task -> leftMerge .                                 (rule 22)

	WHERE          reduce using rule 22
	THEN           reduce using rule 22
	')'            reduce using rule 22
	%eof           reduce using rule 22


State 13

	product -> PRODUCT . '(' selectList ')' TIMES '(' selectList ')'    (rule 24)

	'('            shift, and enter state 33


State 14

	drop -> DROP . columnIndex IN csv                   (rule 25)

	COLUMN         shift, and enter state 28

	columnIndex    goto state 32

State 15

	permutation -> PERMUTE . '(' selectList ')' IN csv    (rule 26)

	'('            shift, and enter state 31


State 16

	copy -> COPY . csv WITH string                      (rule 27)
	copy -> COPY . columnIndex WITH string IN csv       (rule 28)

	COLUMN         shift, and enter state 28
	FILENAME       shift, and enter state 29
	RESULT         shift, and enter state 30

	csv            goto state 25
	columnIndex    goto state 26
	filename       goto state 27

State 17

	leftMerge -> LEFT . MERGE csv TO csv ON columnIndex    (rule 29)
	leftMerge -> LEFT . MERGE csv TO csv                (rule 30)
	leftMerge -> LEFT . MERGE '(' selectList ')' TO '(' selectList ')' ON columnIndex    (rule 31)

	MERGE          shift, and enter state 24


State 18

	Query -> SELECT '(' . selectList ')'                (rule 1)
	Query -> SELECT '(' . selectList ')' WHERE '(' condition ')'    (rule 2)

	GET            shift, and enter state 22

	selectList     goto state 23
	selectItem     goto state 21

State 19

	Query -> SELECT '(' . selectList ')'                (rule 1)

	GET            shift, and enter state 22

	selectList     goto state 20
	selectItem     goto state 21

State 20

	Query -> SELECT '(' selectList . ')'                (rule 1)

	')'            shift, and enter state 51


State 21

	selectList -> selectItem . selectListRest           (rule 13)

	','            shift, and enter state 50
	')'            reduce using rule 15

	selectListRest goto state 49

State 22

	selectItem -> GET . columnIndex OF csv              (rule 16)

	COLUMN         shift, and enter state 28

	columnIndex    goto state 48

State 23

	Query -> SELECT '(' selectList . ')'                (rule 1)
	Query -> SELECT '(' selectList . ')' WHERE '(' condition ')'    (rule 2)

	')'            shift, and enter state 47


State 24

	leftMerge -> LEFT MERGE . csv TO csv ON columnIndex    (rule 29)
	leftMerge -> LEFT MERGE . csv TO csv                (rule 30)
	leftMerge -> LEFT MERGE . '(' selectList ')' TO '(' selectList ')' ON columnIndex    (rule 31)

	FILENAME       shift, and enter state 29
	RESULT         shift, and enter state 30
	'('            shift, and enter state 46

	csv            goto state 45
	filename       goto state 27

State 25

	copy -> COPY csv . WITH string                      (rule 27)

	WITH           shift, and enter state 44


State 26

	copy -> COPY columnIndex . WITH string IN csv       (rule 28)

	WITH           shift, and enter state 43


State 27

	csv -> filename .                                   (rule 32)

	WHERE          reduce using rule 32
	','            reduce using rule 32
	'!='           reduce using rule 32
	IS             reduce using rule 32
	AND            reduce using rule 32
	OR             reduce using rule 32
	THEN           reduce using rule 32
	WITH           reduce using rule 32
	TO             reduce using rule 32
	ON             reduce using rule 32
	'='            reduce using rule 32
	')'            reduce using rule 32
	%eof           reduce using rule 32


State 28

	columnIndex -> COLUMN . int                         (rule 34)

	int            shift, and enter state 42


State 29

	filename -> FILENAME .                              (rule 36)

	WHERE          reduce using rule 36
	','            reduce using rule 36
	'!='           reduce using rule 36
	IS             reduce using rule 36
	AND            reduce using rule 36
	OR             reduce using rule 36
	THEN           reduce using rule 36
	WITH           reduce using rule 36
	TO             reduce using rule 36
	ON             reduce using rule 36
	'='            reduce using rule 36
	')'            reduce using rule 36
	%eof           reduce using rule 36


State 30

	csv -> RESULT . OF '(' tasks ')'                    (rule 33)

	OF             shift, and enter state 41


State 31

	permutation -> PERMUTE '(' . selectList ')' IN csv    (rule 26)

	GET            shift, and enter state 22

	selectList     goto state 40
	selectItem     goto state 21

State 32

	drop -> DROP columnIndex . IN csv                   (rule 25)

	IN             shift, and enter state 39


State 33

	product -> PRODUCT '(' . selectList ')' TIMES '(' selectList ')'    (rule 24)

	GET            shift, and enter state 22

	selectList     goto state 38
	selectItem     goto state 21

State 34

	tasks -> task THEN . tasks                          (rule 18)

	PRODUCT        shift, and enter state 13
	DROP           shift, and enter state 14
	PERMUTE        shift, and enter state 15
	COPY           shift, and enter state 16
	LEFT           shift, and enter state 17

	tasks          goto state 37
	task           goto state 7
	product        goto state 8
	drop           goto state 9
	permutation    goto state 10
	copy           goto state 11
	leftMerge      goto state 12

State 35

	Query -> DO tasks WHERE . '(' condition ')'         (rule 4)

	'('            shift, and enter state 36


State 36

	Query -> DO tasks WHERE '(' . condition ')'         (rule 4)

	GET            shift, and enter state 22

	condition      goto state 64
	selectItem     goto state 65

State 37

	tasks -> task THEN tasks .                          (rule 18)

	WHERE          reduce using rule 18
	')'            reduce using rule 18
	%eof           reduce using rule 18


State 38

	product -> PRODUCT '(' selectList . ')' TIMES '(' selectList ')'    (rule 24)

	')'            shift, and enter state 63


State 39

	drop -> DROP columnIndex IN . csv                   (rule 25)

	FILENAME       shift, and enter state 29
	RESULT         shift, and enter state 30

	csv            goto state 62
	filename       goto state 27

State 40

	permutation -> PERMUTE '(' selectList . ')' IN csv    (rule 26)

	')'            shift, and enter state 61


State 41

	csv -> RESULT OF . '(' tasks ')'                    (rule 33)

	'('            shift, and enter state 60


State 42

	columnIndex -> COLUMN int .                         (rule 34)

	WHERE          reduce using rule 34
	OF             reduce using rule 34
	THEN           reduce using rule 34
	IN             reduce using rule 34
	WITH           reduce using rule 34
	')'            reduce using rule 34
	%eof           reduce using rule 34


State 43

	copy -> COPY columnIndex WITH . string IN csv       (rule 28)

	'('            shift, and enter state 58

	string         goto state 59

State 44

	copy -> COPY csv WITH . string                      (rule 27)

	'('            shift, and enter state 58

	string         goto state 57

State 45

	leftMerge -> LEFT MERGE csv . TO csv ON columnIndex    (rule 29)
	leftMerge -> LEFT MERGE csv . TO csv                (rule 30)

	TO             shift, and enter state 56


State 46

	leftMerge -> LEFT MERGE '(' . selectList ')' TO '(' selectList ')' ON columnIndex    (rule 31)

	GET            shift, and enter state 22

	selectList     goto state 55
	selectItem     goto state 21

State 47

	Query -> SELECT '(' selectList ')' .                (rule 1)
	Query -> SELECT '(' selectList ')' . WHERE '(' condition ')'    (rule 2)

	WHERE          shift, and enter state 54
	%eof           reduce using rule 1


State 48

	selectItem -> GET columnIndex . OF csv              (rule 16)

	OF             shift, and enter state 53


State 49

	selectList -> selectItem selectListRest .           (rule 13)

	')'            reduce using rule 13


State 50

	selectListRest -> ',' . selectItem selectListRest    (rule 14)

	GET            shift, and enter state 22

	selectItem     goto state 52

State 51

	Query -> SELECT '(' selectList ')' .                (rule 1)



State 52

	selectListRest -> ',' selectItem . selectListRest    (rule 14)

	','            shift, and enter state 50
	')'            reduce using rule 15

	selectListRest goto state 81

State 53

	selectItem -> GET columnIndex OF . csv              (rule 16)

	FILENAME       shift, and enter state 29
	RESULT         shift, and enter state 30

	csv            goto state 80
	filename       goto state 27

State 54

	Query -> SELECT '(' selectList ')' WHERE . '(' condition ')'    (rule 2)

	'('            shift, and enter state 79


State 55

	leftMerge -> LEFT MERGE '(' selectList . ')' TO '(' selectList ')' ON columnIndex    (rule 31)

	')'            shift, and enter state 78


State 56

	leftMerge -> LEFT MERGE csv TO . csv ON columnIndex    (rule 29)
	leftMerge -> LEFT MERGE csv TO . csv                (rule 30)

	FILENAME       shift, and enter state 29
	RESULT         shift, and enter state 30

	csv            goto state 77
	filename       goto state 27

State 57

	copy -> COPY csv WITH string .                      (rule 27)

	WHERE          reduce using rule 27
	THEN           reduce using rule 27
	')'            reduce using rule 27
	%eof           reduce using rule 27


State 58

	string -> '(' . var ')'                             (rule 35)

	var            shift, and enter state 76


State 59

	copy -> COPY columnIndex WITH string . IN csv       (rule 28)

	IN             shift, and enter state 75


State 60

	csv -> RESULT OF '(' . tasks ')'                    (rule 33)

	PRODUCT        shift, and enter state 13
	DROP           shift, and enter state 14
	PERMUTE        shift, and enter state 15
	COPY           shift, and enter state 16
	LEFT           shift, and enter state 17

	tasks          goto state 74
	task           goto state 7
	product        goto state 8
	drop           goto state 9
	permutation    goto state 10
	copy           goto state 11
	leftMerge      goto state 12

State 61

	permutation -> PERMUTE '(' selectList ')' . IN csv    (rule 26)

	IN             shift, and enter state 73


State 62

	drop -> DROP columnIndex IN csv .                   (rule 25)

	WHERE          reduce using rule 25
	THEN           reduce using rule 25
	')'            reduce using rule 25
	%eof           reduce using rule 25


State 63

	product -> PRODUCT '(' selectList ')' . TIMES '(' selectList ')'    (rule 24)

	TIMES          shift, and enter state 72


State 64

	Query -> DO tasks WHERE '(' condition . ')'         (rule 4)
	condition -> condition . AND condition              (rule 11)
	condition -> condition . OR condition               (rule 12)

	AND            shift, and enter state 69
	OR             shift, and enter state 70
	')'            shift, and enter state 71


State 65

	condition -> selectItem . '=' string                (rule 5)
	condition -> selectItem . '!=' string               (rule 6)
	condition -> selectItem . '=' selectItem            (rule 7)
	condition -> selectItem . '!=' selectItem           (rule 8)
	condition -> selectItem . IS EMPTY                  (rule 9)
	condition -> selectItem . IS NOT EMPTY              (rule 10)

	'!='           shift, and enter state 66
	IS             shift, and enter state 67
	'='            shift, and enter state 68


State 66

	condition -> selectItem '!=' . string               (rule 6)
	condition -> selectItem '!=' . selectItem           (rule 8)

	GET            shift, and enter state 22
	'('            shift, and enter state 58

	selectItem     goto state 96
	string         goto state 97

State 67

	condition -> selectItem IS . EMPTY                  (rule 9)
	condition -> selectItem IS . NOT EMPTY              (rule 10)

	NOT            shift, and enter state 94
	EMPTY          shift, and enter state 95


State 68

	condition -> selectItem '=' . string                (rule 5)
	condition -> selectItem '=' . selectItem            (rule 7)

	GET            shift, and enter state 22
	'('            shift, and enter state 58

	selectItem     goto state 92
	string         goto state 93

State 69

	condition -> condition AND . condition              (rule 11)

	GET            shift, and enter state 22

	condition      goto state 91
	selectItem     goto state 65

State 70

	condition -> condition OR . condition               (rule 12)

	GET            shift, and enter state 22

	condition      goto state 90
	selectItem     goto state 65

State 71

	Query -> DO tasks WHERE '(' condition ')' .         (rule 4)

	%eof           reduce using rule 4


State 72

	product -> PRODUCT '(' selectList ')' TIMES . '(' selectList ')'    (rule 24)

	'('            shift, and enter state 89


State 73

	permutation -> PERMUTE '(' selectList ')' IN . csv    (rule 26)

	FILENAME       shift, and enter state 29
	RESULT         shift, and enter state 30

	csv            goto state 88
	filename       goto state 27

State 74

	csv -> RESULT OF '(' tasks . ')'                    (rule 33)

	')'            shift, and enter state 87


State 75

	copy -> COPY columnIndex WITH string IN . csv       (rule 28)

	FILENAME       shift, and enter state 29
	RESULT         shift, and enter state 30

	csv            goto state 86
	filename       goto state 27

State 76

	string -> '(' var . ')'                             (rule 35)

	')'            shift, and enter state 85


State 77

	leftMerge -> LEFT MERGE csv TO csv . ON columnIndex    (rule 29)
	leftMerge -> LEFT MERGE csv TO csv .                (rule 30)

	WHERE          reduce using rule 30
	THEN           reduce using rule 30
	ON             shift, and enter state 84
	')'            reduce using rule 30
	%eof           reduce using rule 30


State 78

	leftMerge -> LEFT MERGE '(' selectList ')' . TO '(' selectList ')' ON columnIndex    (rule 31)

	TO             shift, and enter state 83


State 79

	Query -> SELECT '(' selectList ')' WHERE '(' . condition ')'    (rule 2)

	GET            shift, and enter state 22

	condition      goto state 82
	selectItem     goto state 65

State 80

	selectItem -> GET columnIndex OF csv .              (rule 16)

	','            reduce using rule 16
	'!='           reduce using rule 16
	IS             reduce using rule 16
	AND            reduce using rule 16
	OR             reduce using rule 16
	'='            reduce using rule 16
	')'            reduce using rule 16


State 81

	selectListRest -> ',' selectItem selectListRest .    (rule 14)

	')'            reduce using rule 14


State 82

	Query -> SELECT '(' selectList ')' WHERE '(' condition . ')'    (rule 2)
	condition -> condition . AND condition              (rule 11)
	condition -> condition . OR condition               (rule 12)

	AND            shift, and enter state 69
	OR             shift, and enter state 70
	')'            shift, and enter state 102


State 83

	leftMerge -> LEFT MERGE '(' selectList ')' TO . '(' selectList ')' ON columnIndex    (rule 31)

	'('            shift, and enter state 101


State 84

	leftMerge -> LEFT MERGE csv TO csv ON . columnIndex    (rule 29)

	COLUMN         shift, and enter state 28

	columnIndex    goto state 100

State 85

	string -> '(' var ')' .                             (rule 35)

	WHERE          reduce using rule 35
	AND            reduce using rule 35
	OR             reduce using rule 35
	THEN           reduce using rule 35
	IN             reduce using rule 35
	')'            reduce using rule 35
	%eof           reduce using rule 35


State 86

	copy -> COPY columnIndex WITH string IN csv .       (rule 28)

	WHERE          reduce using rule 28
	THEN           reduce using rule 28
	')'            reduce using rule 28
	%eof           reduce using rule 28


State 87

	csv -> RESULT OF '(' tasks ')' .                    (rule 33)

	WHERE          reduce using rule 33
	','            reduce using rule 33
	'!='           reduce using rule 33
	IS             reduce using rule 33
	AND            reduce using rule 33
	OR             reduce using rule 33
	THEN           reduce using rule 33
	WITH           reduce using rule 33
	TO             reduce using rule 33
	ON             reduce using rule 33
	'='            reduce using rule 33
	')'            reduce using rule 33
	%eof           reduce using rule 33


State 88

	permutation -> PERMUTE '(' selectList ')' IN csv .    (rule 26)

	WHERE          reduce using rule 26
	THEN           reduce using rule 26
	')'            reduce using rule 26
	%eof           reduce using rule 26


State 89

	product -> PRODUCT '(' selectList ')' TIMES '(' . selectList ')'    (rule 24)

	GET            shift, and enter state 22

	selectList     goto state 99
	selectItem     goto state 21

State 90

	condition -> condition . AND condition              (rule 11)
	condition -> condition . OR condition               (rule 12)
	condition -> condition OR condition .               (rule 12)

	AND            shift, and enter state 69
	OR             reduce using rule 12
	')'            reduce using rule 12


State 91

	condition -> condition . AND condition              (rule 11)
	condition -> condition AND condition .              (rule 11)
	condition -> condition . OR condition               (rule 12)

	AND            reduce using rule 11
	OR             reduce using rule 11
	')'            reduce using rule 11


State 92

	condition -> selectItem '=' selectItem .            (rule 7)

	AND            reduce using rule 7
	OR             reduce using rule 7
	')'            reduce using rule 7


State 93

	condition -> selectItem '=' string .                (rule 5)

	AND            reduce using rule 5
	OR             reduce using rule 5
	')'            reduce using rule 5


State 94

	condition -> selectItem IS NOT . EMPTY              (rule 10)

	EMPTY          shift, and enter state 98


State 95

	condition -> selectItem IS EMPTY .                  (rule 9)

	AND            reduce using rule 9
	OR             reduce using rule 9
	')'            reduce using rule 9


State 96

	condition -> selectItem '!=' selectItem .           (rule 8)

	AND            reduce using rule 8
	OR             reduce using rule 8
	')'            reduce using rule 8


State 97

	condition -> selectItem '!=' string .               (rule 6)

	AND            reduce using rule 6
	OR             reduce using rule 6
	')'            reduce using rule 6


State 98

	condition -> selectItem IS NOT EMPTY .              (rule 10)

	AND            reduce using rule 10
	OR             reduce using rule 10
	')'            reduce using rule 10


State 99

	product -> PRODUCT '(' selectList ')' TIMES '(' selectList . ')'    (rule 24)

	')'            shift, and enter state 104


State 100

	leftMerge -> LEFT MERGE csv TO csv ON columnIndex .    (rule 29)

	WHERE          reduce using rule 29
	THEN           reduce using rule 29
	')'            reduce using rule 29
	%eof           reduce using rule 29


State 101

	leftMerge -> LEFT MERGE '(' selectList ')' TO '(' . selectList ')' ON columnIndex    (rule 31)

	GET            shift, and enter state 22

	selectList     goto state 103
	selectItem     goto state 21

State 102

	Query -> SELECT '(' selectList ')' WHERE '(' condition ')' .    (rule 2)

	%eof           reduce using rule 2


State 103

	leftMerge -> LEFT MERGE '(' selectList ')' TO '(' selectList . ')' ON columnIndex    (rule 31)

	')'            shift, and enter state 105


State 104

	product -> PRODUCT '(' selectList ')' TIMES '(' selectList ')' .    (rule 24)

	WHERE          reduce using rule 24
	THEN           reduce using rule 24
	')'            reduce using rule 24
	%eof           reduce using rule 24


State 105

	leftMerge -> LEFT MERGE '(' selectList ')' TO '(' selectList ')' . ON columnIndex    (rule 31)

	ON             shift, and enter state 106


State 106

	leftMerge -> LEFT MERGE '(' selectList ')' TO '(' selectList ')' ON . columnIndex    (rule 31)

	COLUMN         shift, and enter state 28

	columnIndex    goto state 107

State 107

	leftMerge -> LEFT MERGE '(' selectList ')' TO '(' selectList ')' ON columnIndex .    (rule 31)

	WHERE          reduce using rule 31
	THEN           reduce using rule 31
	')'            reduce using rule 31
	%eof           reduce using rule 31


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 37
Number of terminals: 32
Number of non-terminals: 17
Number of states: 108
